[tool.poetry]
name = "ncov"
version = "0.1.0"
description = "Another 2019-nCoV stats gathering and visualization project."
authors = ["Zhiming Wang <i@zhimingwang.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
beautifulsoup4 = "^4.8.2"
peewee = "^3.13.1"
tenacity = "^6.0.0"
dash = "^1.9.0"
pandas = "^1.0.1"
gunicorn = "^20.0.4"
dash-dangerously-set-inner-html = "^0.0.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
